--- a/teamApp/Storyboards/Quiz.storyboard
+++ b/teamApp/Storyboards/Quiz.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3b0-bZ-U6u">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +14,7 @@
             <objects>
                 <navigationController id="3b0-bZ-U6u" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GbP-w5-DPb">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -29,24 +30,140 @@
             <objects>
                 <viewController id="jKv-a4-rdV" customClass="QuizViewController" customModule="teamApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EjW-SC-x6J">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1m0-Pk-ia0">
+                                <rect key="frame" x="16" y="191" width="343" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="wR1-pV-nh3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2VB-RD-5c8">
+                                <rect key="frame" x="16" y="251" width="343" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="LyZ-YT-Xew"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cr1-Wh-4FV">
+                                <rect key="frame" x="125" y="312" width="125" height="42"/>
+                                <color key="backgroundColor" red="1" green="0.8458679685559074" blue="0.57866843529471301" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="125" id="1fl-mi-TZ6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Log In"/>
+                                <connections>
+                                    <action selector="logInPresed" destination="jKv-a4-rdV" eventType="touchUpInside" id="5OT-he-waC"/>
+                                    <segue destination="ydj-cB-vRg" kind="presentation" identifier="logIn" modalPresentationStyle="fullScreen" id="3GR-Hm-dGP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7aK-yP-Tmv">
+                                <rect key="frame" x="16" y="362" width="133" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="133" id="jqT-AF-IrL"/>
+                                </constraints>
+                                <state key="normal" title="Forgot User Name?"/>
+                                <connections>
+                                    <action selector="showUserNames:" destination="jKv-a4-rdV" eventType="touchUpInside" id="omS-KI-xvL"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ciE-bS-jF5">
+                                <rect key="frame" x="231" y="362" width="123" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="123" id="eQZ-e2-PJf"/>
+                                </constraints>
+                                <state key="normal" title="Forgot Password?"/>
+                                <connections>
+                                    <action selector="showUserPasswords:" destination="jKv-a4-rdV" eventType="touchUpInside" id="htI-uN-lkw"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ktg-g1-RKk">
+                                <rect key="frame" x="14" y="58" width="347" height="45"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey✌️! Do you want know more about you?  You can do it now! ⤵️ " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1L-io-gnR">
+                                        <rect key="frame" x="0.0" y="0.0" width="347" height="45"/>
+                                        <color key="tintColor" systemColor="systemBlueColor"/>
+                                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="tlU-Bq-dsn"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                        <constraints>
+                            <constraint firstItem="2VB-RD-5c8" firstAttribute="centerX" secondItem="tlU-Bq-dsn" secondAttribute="centerX" id="AEf-Uu-IFO"/>
+                            <constraint firstItem="ciE-bS-jF5" firstAttribute="top" secondItem="2VB-RD-5c8" secondAttribute="bottom" constant="77" id="CkJ-Tl-FQi"/>
+                            <constraint firstItem="7aK-yP-Tmv" firstAttribute="leading" secondItem="tlU-Bq-dsn" secondAttribute="leading" constant="16" id="Fw7-sY-vha"/>
+                            <constraint firstItem="ktg-g1-RKk" firstAttribute="leading" secondItem="tlU-Bq-dsn" secondAttribute="leading" constant="14" id="LIA-rG-K72"/>
+                            <constraint firstItem="7aK-yP-Tmv" firstAttribute="top" secondItem="2VB-RD-5c8" secondAttribute="bottom" constant="77" id="Mct-Ui-3M0"/>
+                            <constraint firstItem="tlU-Bq-dsn" firstAttribute="trailing" secondItem="ciE-bS-jF5" secondAttribute="trailing" constant="21" id="ViA-pu-PzV"/>
+                            <constraint firstItem="Cr1-Wh-4FV" firstAttribute="top" secondItem="2VB-RD-5c8" secondAttribute="bottom" constant="27" id="Ykw-Nq-eiD"/>
+                            <constraint firstItem="Cr1-Wh-4FV" firstAttribute="centerX" secondItem="tlU-Bq-dsn" secondAttribute="centerX" id="kAb-iY-Kmf"/>
+                            <constraint firstAttribute="trailing" secondItem="ktg-g1-RKk" secondAttribute="trailing" constant="14" id="qhV-h1-Ihk"/>
+                            <constraint firstItem="2VB-RD-5c8" firstAttribute="top" secondItem="1m0-Pk-ia0" secondAttribute="bottom" constant="26" id="rur-LH-Nc4"/>
+                            <constraint firstItem="ktg-g1-RKk" firstAttribute="top" secondItem="tlU-Bq-dsn" secondAttribute="top" constant="14" id="rvl-HX-b59"/>
+                            <constraint firstItem="1m0-Pk-ia0" firstAttribute="top" secondItem="tlU-Bq-dsn" secondAttribute="top" constant="147" id="s13-tU-Wfk"/>
+                            <constraint firstItem="1m0-Pk-ia0" firstAttribute="centerX" secondItem="tlU-Bq-dsn" secondAttribute="centerX" id="tUO-um-4fi"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Quiz" image="person.fill.questionmark" catalog="system" id="4nP-eb-2BT"/>
                     <navigationItem key="navigationItem" title="Quiz" id="IKR-wO-nUb"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="logInButton" destination="Cr1-Wh-4FV" id="DEl-F7-CjO"/>
+                        <outlet property="password" destination="2VB-RD-5c8" id="yEV-fL-SsC"/>
+                        <outlet property="userName" destination="1m0-Pk-ia0" id="eG6-LK-nPi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5gI-w2-acm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="410" y="149"/>
+            <point key="canvasLocation" x="407.19999999999999" y="147.97601199400302"/>
+        </scene>
+        <!--Start Page Of Quiz Table View Controller-->
+        <scene sceneID="mmT-ru-6ZA">
+            <objects>
+                <viewController id="ydj-cB-vRg" customClass="startPageOfQuizTableViewController" customModule="teamApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JAR-rc-4zz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TMJ-WT-or0">
+                                <rect key="frame" x="88" y="90" width="199" height="73"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="IyM-n7-Cym"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="userNameLog" destination="TMJ-WT-or0" id="dVU-oD-pfL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gH3-SV-Vq7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1188" y="443"/>
         </scene>
     </scenes>
     <resources>
         <image name="person.fill.questionmark" catalog="system" width="128" height="104"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
